cluster/apps/media/prowlarr/networkpolicies/envoy-gateway-egress-prowlarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-prowlarr
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy-gateway
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: envoy-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            app: prowlarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
