cluster/apps/media/prowlarr/networkpolicies/prowlarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: media
spec:
  description: "Policy for prowlarr"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: sonarr
            "k8s:io.kubernetes.pod.namespace": media
        - matchLabels:
            app.kubernetes.io/name: radarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: ${USENET_INDEXER_DOMAIN}
        - matchName: file.${USENET_INDEXER_DOMAIN}
        - matchName: ghcr.io # catppuccin theme
        - matchName: hooks.slack.com
        - matchName: indexers.prowlarr.com
        - matchName: pkg-containers.githubusercontent.com # catppuccin theme
        - matchName: prowlarr.servarr.com
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: releases.servarr.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
